[package]
name = "rumtk-core"
description = "Core library for providing general functionality to support the other RUMTK crates. See rumtk-hl7-v2 crate as example"
version = "0.4.2"
license = "LGPL-2.1"
homepage = "https://github.com/kiseitai3/rumtk/tree/main/toolkit/rumtk-core"
documentation = "https://docs.rs/rumtk-core"
readme = "README.md"
repository = "https://github.com/kiseitai3/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2", "core"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.69.0"

[dependencies]
unicode-segmentation = "1.12.0"
compact_str = "0.8.1"
encoding_rs = "0.8.35"
chardetng = "0.1.17"
ahash = "0.8.11"
regex = "1.11.1"
once_cell = "1.20.2"
tokio = { version = "1.43.0", features = ["full"] }
smallvec = "1.13.2"
num_cpus = "1.16.0"
uuid = { version = "1.12.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
