[package]
name = "rumtk-core"
description = "Core library for providing general functionality to support the other RUMTK crates. See rumtk-hl7-v2 crate as example"
version = "0.5.1"
license = "LGPL-2.1"
homepage = "https://github.com/kiseitai3/rumtk/tree/main/toolkit/rumtk-core"
documentation = "https://docs.rs/rumtk-core"
readme = "README.md"
repository = "https://github.com/kiseitai3/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2", "core"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.79.0"

[dependencies]
unicode-segmentation = "1.12.0"
compact_str = { version = "0.9.0", features = ["serde"] }
encoding_rs = "0.8.35"
chardetng = "0.1.17"
ahash = { version = "0.8.12", features = ["serde"] }
regex = "1.11.1"
once_cell = "1.20.2"
tokio = { version = "1.43.0", features = ["full"] }
smallvec = "1.13.2"
num_cpus = "1.16.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
uuid = { version = "1.12.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
