[package]
name = "rumtk-hl7-v2"
description = "HL7 V2 Parser and MLLP Implementation to support building interface utilities."
version = "0.1.0"
license-file = "LICENSE"
readme = "../../README.md"
repository = "https://github.com/kiseitai3/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.69.0"

[dependencies]
phf = "0.11.3"
phf_macros = "0.11.3"
chrono = "0.4.39"
once_cell = "1.20.2"
rumtk-core = { path = "../rumtk-core" }
tokio = { version = "1.43.0", features = ["full"] }
#rumtk-core = "0.3.1"
