[package]
name = "rumtk-hl7-v2"
description = "HL7 V2 Parser and MLLP Implementation to support building interface utilities."
version = "0.4.1"
license-file = "LICENSE-LGPL"
readme = "README.md"
license = "LGPL-2.1"
homepage = "https://github.com/kiseitai3/rumtk/tree/main/toolkit/rumtk-hl7-v2"
documentation = "https://docs.rs/rumtk-hl7-v2"
repository = "https://github.com/kiseitai3/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.69.0"

[dependencies]
phf = "0.11.3"
phf_macros = "0.11.3"
chrono = "0.4.39"
once_cell = "1.20.2"
#rumtk-core = { path = "../rumtk-core" }
tokio = { version = "1.43.0", features = ["full"] }
rumtk-core = "0.4.1"
