[package]
name = "rumtk-hl7-v2"
description = "HL7 V2 Parser and MLLP Implementation to support building interface utilities."
version = "0.7.0"
readme = "README.md"
license = "LGPL-2.1"
homepage = "https://github.com/kiseitai3/rumtk/tree/main/toolkit/rumtk-hl7-v2"
documentation = "https://docs.rs/rumtk-hl7-v2"
repository = "https://github.com/kiseitai3/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.79.0"

[dependencies]
phf = "0.11.3"
phf_macros = "0.11.3"
chrono = "0.4.39"
once_cell = "1.20.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
#rumtk-core = { path = "../rumtk-core" }
tokio = { version = "1.45.0", features = ["full"] }
rumtk-core = "0.8.0"
