[package]
name = "rumtk-v2-interface"
description = "HL7 V2 Interface utility based on the RUMTK framework."
version = "0.1.0"
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/kiseitai3/rumtk/tree/main/toolkit/rumtk-v2-interface"
documentation = "https://docs.rs/rumtk-v2-interface"
repository = "https://github.com/kiseitai3/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2", "interface"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.79.0"

[dependencies]
#rumtk-core = { path = "../rumtk-core" }
#rumtk-hl7-v2 = { path = "../rumtk-hl7-v2" }
rumtk-core = "0.7.0"
rumtk-hl7-v2 = "0.6.0"
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
